PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts_Graph: Add new automated color chooser for line graph color selection
- phodevi: Add support for Intel DRM driver's gt_max_freq_mhz for obtaining maximum GPU frequency on modern kernels
- phodevi: Add support for Intel DRM driver's gt_cur_freq_mhz for obtaining current GPU frequency on modern kernels
- phodevi: Only prepend AIB vendor to NVIDIA and AMD GPU strings

Phoronix Test Suite 4.8 Milestone 4
24 July 2013

- pts-core: Add initial support for test profile's downloads.xml to have a SHA256 hash for files
- pts-core: Rename NO_MD5_CHECKS environment variable to NO_FILE_HASH_CHECKS
- pts-core: Add PTS5 codenames from Tulskaya oblast / Tula Oblast Russian region
- pts-core: Support fixes for Facebook HipHop Virtual Machine for PHP HHVM 2.1.0
- pts-core: Fix text corruption bug with auto shortening of identifiers on multi-way comparisons
- pts_Graph: Fix auto shortening when the first identifier is only one word
- phodevi: Support ECS and eVGA graphics card AIB vendor detection

Phoronix Test Suite 4.8 Milestone 3
19 July 2013

- pts-core: Add few more cases of error detection on failed test install
- pts-core: Round download size totals in the concise display mode for large files
- pts-core: Add missing PreInstallMessage and PostInstallMessage to the OpenBenchmarking.org test profile schema and writer
- pts-core: Allow test results to have "secondary_linked_results"
- pts-core: Add initial support for frame latency / jitter secondary result graphs
- pts_Graph: Assume any version of Google Chrome/Chromium can render SVG
- pts_Graph: Only prepend 'v' to version string on graphs if first character is numeric
- toggle-screensaver: Support doing "xscreensaver-command -exit" when needed
- phodevi: Add more stock fallback display modes
- phodevi: Ensure MB/GB are reported on OS X memory strings
- phodevi: Workaround Linux 3.10 kernel reporting bogus frequencies for scaling_max_freq on some Intel CPUs