@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 - pts_Graph: Add new automated color chooser for line graph color selection
+- pts_Graph: Slight rework to code handling the remove of common words from result identifiers
 - phodevi: Add support for Intel DRM driver's gt_max_freq_mhz for obtaining maximum GPU frequency on modern kernels
 - phodevi: Add support for Intel DRM driver's gt_cur_freq_mhz for obtaining current GPU frequency on modern kernels
 - phodevi: Only prepend AIB vendor to NVIDIA and AMD GPU strings
